2009-06-09  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Adding InverseKinematics.
	* include/dynamicsJRLJapan/InverseKinematics.h: New.
	* src/InverseKinematics.cpp: New.

2009-06-09  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Adding missing methods.
	* src/HumanoidDynamicMultiBody.cpp: 
	Added GetUpperBodyJoints and GetUpperBodyJointNB.

2009-06-09  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Adding Inverse Kinematics to HumanoidDynamicMultiBody.h.
	* include/dynamicsJRLJapan/HumanoidDynamicMultiBody.h: 
	Adding InverseKinematics.
	* src/CMakeLists.txt:
	Compiling InverseKinematics .
	* src/DynamicMultiBody.cpp: 
	Code cleaning.
	* src/HumanoidDynamicMultiBody.cpp: 
	Adding instantce of HumanoidDynamicMultibody.

2009-06-09  Olivier Stasse  <olivier.stasse@aist.go.jp>

	HumanoidDynamicMultiBody augmented with HRPSpecificities interface.
	* include/dynamicsJRLJapan/HumanoidDynamicMultiBody.h:
	Adding HRPSpecificities interface.
	* src/HumanoidDynamicMultiBody.cpp: 
	Calling m_HS.

2009-06-04  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Adding a new method for optimized code in hrp2dynamics.
	* include/dynamicsJRLJapan/DynamicMultiBody.h: 
	Adding access to inertiaMatrix.
	* src/DynamicMultiBody.cpp: .

2009-06-04  Olivier Stasse  <olivier.stasse@aist.go.jp>

	License is send back to file License.txt.
	* include/dynamicsJRLJapan/Body.h: .
	* include/dynamicsJRLJapan/DynamicBody.h: .
	* include/dynamicsJRLJapan/Hand.h: .
	* include/dynamicsJRLJapan/HumanoidDynamicMultiBody.h: .
	* include/dynamicsJRLJapan/HumanoidSpecificities.h: .
	* include/dynamicsJRLJapan/Joint.h: .
	* include/dynamicsJRLJapan/MultiBody.h: .
	* include/dynamicsJRLJapan/SpiritVRMLReader.h: .
	* include/dynamicsJRLJapan/fileReader.h: .
	* src/Body.cpp: .
	* src/CMakeLists.txt: .
	* src/DynamicBody.cpp: .
	* src/Hand.cpp: .
	* src/HumanoidDynamicMultiBody.cpp: .
	* src/HumanoidSpecificities.cpp: .
	* src/Joint.cpp: .
	* src/MultiBody.cpp: .
	* src/SpiritVRMLReader.cpp: .